<resources>
    <string name="app_name">EmpCom</string>
    <string name="slogan">Care For You!</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Remember">Remeber Me</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="CreateAccount">Create Account</string>
    <string name="EnterFullName">Enter Full Name</string>
    <string name="EnterUserName">Enter UserName</string>
    <string name="NewPassword">New Password</string>
    <string name="Next">Next</string>
    <string name="alreday_have_account">Already have account? LogIn here</string>
    <string name="phone_number">Phone Number</string>
    <string name="dont_have_acount">Don\'t have account? SignUp here</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_otp">Enter the OTP sent to +919870686646 if \n your phone number is in this phone you don\'t need to enter.</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">New Post</string>

</resources>