<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/Login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_showFlag="true"
                android:id="@+id/login_countryCodePicker"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:background="@drawable/black_border"

                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:hint="@string/phone_number"
                android:id="@+id/login_phone_number"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/login_person_login_page"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberByRememberMe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:inputType="number"
                    android:textColor="@color/black"


                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:hint="@string/Password"
                app:boxStrokeWidth="2dp"
                android:id="@+id/login_password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/passwor_login_page"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/passwordByRememberMe"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins"
                    android:drawablePadding="10dp"


                    />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember"
                    android:id="@+id/rememberMe"
                    android:layout_centerVertical="true"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"
                    />
                <Button
                    android:onClick="forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ForgetPassword"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/progress_circular"
                />
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbg"
                android:text="@string/Login"
                android:onClick="login"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="create_an_account"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:textAllCaps="false"
                android:text="@string/dont_have_acount" />





        </LinearLayout>
    </LinearLayout>


</ScrollView>