<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/SignUp_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/SignUp_tile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal"
            android:text="@string/CreateAccount"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/SignUp_CountryCodePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border"
                app:ccp_showFlag="true"
                app:ccp_showFullName="true"
                app:ccp_showNameCode="true"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_PhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:inputType="number"
                    android:textColor="@color/colorAccent">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EnterFullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/EnterFullName"
                android:textColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/edit_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="10dp">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterUserName"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/login_person_login_page"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/colorAccent">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Signup_Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NewPassword"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/colorAccent"
                app:startIconDrawable="@drawable/passwor_login_page"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="10dp"

                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:indeterminateTint="@color/colorPrimary" />

            <Button
                android:id="@+id/SignUp_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_circular"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonbg"
                android:elevation="5dp"
                android:onClick="CallNextSignUpScreen"
                android:text="@string/Next"
                android:textColor="@color/white"
                android:transitionName="transition_next_btn" />


            <Button
                android:id="@+id/SignUp_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SignUp_next_btn"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:onClick="LoginButton"
                android:text="@string/alreday_have_account"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>